[package]
name = "interactive_paper"
version = "0.1.0"
authors = ["shaddyshad <mwangishadrack5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"