[package]
name = "interactive_paper"
version = "0.1.0"
authors = ["shaddyshad <mwangishadrack5@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
tendril = "0.4.1"
hyper = "0.13"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
futures = "0.3.4"
reduce = "0.1.2"
multipart = "0.16.1"
actix-web = "2.0"
actix-rt = "1.0"
actix-multipart = "0.2.0"
env_logger = "0.7.1"
listenfd = "0.3"